force-app/main/default/objects/Partner_Lead__c/Partner_Lead__c.object-meta.xml
<CustomObject>
    <label>Partner Lead</label>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>