force-app/main/default/objects/Partner_Lead__c/fields/Company_Description__c.field-meta.xml
<CustomField>
    <fullName>Company_Description__c</fullName>
    <label>Company Description</label>
    <type>TextArea</type>
</CustomField>