force-app/main/default/objects/Partner_Lead__c/fields/Salesforce_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Cloud__c</fullName>
    <label>Salesforce Cloud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>